Updated MoreMenu and it's styles.

--- a/packages/edit-post/src/components/header/more-menu/style.scss
+++ b/packages/edit-post/src/components/header/more-menu/style.scss
@@ -7,6 +7,17 @@
 		padding: 0 2px;
 	}
 
+	&.show-icon-label {
+		button[aria-label] {
+			display: block;
+			&::after {
+				content: attr(aria-label);
+				display: block;
+				font-size: 12px;
+			}
+		}
+	}
+
 	@include break-small() {
 		margin-left: 0;
 
