Updated Header style.scss.

--- a/packages/edit-post/src/components/header/style.scss
+++ b/packages/edit-post/src/components/header/style.scss
@@ -55,6 +55,22 @@
 	flex-wrap: wrap;
 	padding-right: $grid-unit-05;
 
+	button.admin-settings[aria-label] {
+		&.has-text-label {
+			color: $white;
+			background: $dark-gray-500;
+			&:hover {
+				color: $white;
+				background: $dark-gray-600;
+			}
+			&::after {
+				content: attr(aria-label);
+				display: inline-block;
+				font-size: 12px;
+			}
+		}
+	}
+
 	@include break-small() {
 		padding-right: $grid-unit-20;
 	}
