--- a/packages/components/src/button/style.scss
+++ b/packages/components/src/button/style.scss
@@ -1,5 +1,6 @@
 .components-button {
 	display: inline-flex;
+	flex-wrap: wrap;
 	text-decoration: none;
 	font-size: $default-font-size;
 	margin: 0;
@@ -251,6 +252,10 @@
 	svg {
 		fill: currentColor;
 		outline: none;
+	}
+
+	.label {
+		flex-basis: 100%;
 	}
 
 	// Fixes a Safari+VoiceOver bug, where the screen reader text is announced not respecting the source order.
