Fix SVG color and pointer events

--- a/packages/edit-post/src/components/header/fullscreen-mode-close/style.scss
+++ b/packages/edit-post/src/components/header/fullscreen-mode-close/style.scss
@@ -17,14 +17,11 @@
 
 		svg {
 			padding: 4px;
+			pointer-events: none;
 			border-radius: 2px;
 			width: 32px;
 			height: 32px;
 			fill: $white;
-		}
-
-		svg {
-			fill: #23282e;
 		}
 
 		&:hover {
